# ft

./: CMakeLists.txt
include/: ft_client.hpp  ft_includes.hpp  ft_server.hpp
src/: ft_client.cpp  ft_server.cpp  main.cpp  main_client.cpp  main_server.cpp
